--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1598,27 +1598,27 @@
                         <div class="card-body">
                             <div class="table-responsive" style="font-size: 13px;">
                                 <table class="table table-striped table-hover table-bordered">
-                                    <thead class="table-dark">
+                                    <thead style="background-color: #2c3e50;">
                                         <tr>
-                                            <th class="text-center">級別</th>
-                                            <th class="text-center">用戶名</th>
-                                            <th class="text-center">餘額</th>
-                                            <th class="text-center">筆數</th>
-                                            <th class="text-center">下注金額</th>
-                                            <th class="text-center">有效金額</th>
-                                            <th class="text-center">會員輸贏</th>
-                                            <th class="text-center">九級代理輸贏</th>
-                                            <th class="text-center">上交貨量</th>
-                                            <th class="text-center">上級交收輸贏</th>
-                                            <th class="text-center">退水</th>
-                                            <th class="text-center">盈虧結果</th>
-                                            <th class="text-center">應收下線</th>
-                                            <th class="text-center">佔成</th>
-                                            <th class="text-center">佔成金額</th>
-                                            <th class="text-center">佔成結果</th>
-                                            <th class="text-center">實佔退水</th>
-                                            <th class="text-center">賺水</th>
-                                            <th class="text-center">盈虧結果</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">級別</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">用戶名</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">餘額</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">筆數</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">下注金額</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">有效金額</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">會員輸贏</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">九級代理輸贏</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">上交貨量</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">上級交收輸贏</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">退水</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">盈虧結果</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">應收下線</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">佔成</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">佔成金額</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">佔成結果</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">實佔退水</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">賺水</th>
+                                            <th class="text-center" style="color: white; font-weight: bold; background-color: #2c3e50;">盈虧結果</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -1663,7 +1663,9 @@
                                             <td class="text-end" :class="getProfitClass(data.commissionResult)">
                                                 {{ formatProfit(data.commissionResult) }}
                                             </td>
-                                            <td class="text-end text-warning">{{ formatMoney(data.actualRebate) }}</td>
+                                            <td class="text-center">
+                                                <span class="badge bg-warning">{{ data.actualRebate.toFixed(1) }}%</span>
+                                            </td>
                                             <td class="text-end" :class="getProfitClass(data.rebateProfit)">
                                                 {{ formatProfit(data.rebateProfit) }}
                                             </td>
@@ -1705,7 +1707,9 @@
                                             <td class="text-end" :class="getProfitClass(reportData.totalSummary.commissionResult)">
                                                 {{ formatProfit(reportData.totalSummary.commissionResult) }}
                                             </td>
-                                            <td class="text-end">{{ formatMoney(reportData.totalSummary.actualRebate) }}</td>
+                                            <td class="text-center">
+                                                <span class="badge bg-warning">{{ reportData.reportData.length > 0 ? (reportData.totalSummary.actualRebate / reportData.reportData.length).toFixed(1) : '0.0' }}%</span>
+                                            </td>
                                             <td class="text-end" :class="getProfitClass(reportData.totalSummary.rebateProfit)">
                                                 {{ formatProfit(reportData.totalSummary.rebateProfit) }}
                                             </td>
@@ -1725,16 +1729,16 @@
                                         <ul class="mb-0">
                                             <li><strong>會員輸贏:</strong> 會員的盈虧狀況</li>
                                             <li><strong>九級代理輸贏:</strong> 代理的盈虧狀況（與會員相反）</li>
-                                            <li><strong>上交貨量:</strong> 向上級交收的金額（投注額的85%）</li>
-                                            <li><strong>上級交收輸贏:</strong> 向上級交收的盈虧（盈虧的90%）</li>
+                                            <li><strong>上交貨量:</strong> 向上級交收的金額</li>
+                                            <li><strong>上級交收輸贏:</strong> 向上級交收的盈虧</li>
                                         </ul>
                                     </div>
                                     <div class="col-md-6">
                                         <ul class="mb-0">
-                                            <li><strong>應收下線:</strong> 從下線收取的金額（投注額的10%）</li>
+                                            <li><strong>應收下線:</strong> 從下線收取的金額</li>
                                             <li><strong>佔成:</strong> 代理的佣金比例</li>
-                                            <li><strong>實佔退水:</strong> 實際分配的退水金額</li>
-                                            <li><strong>賺水:</strong> 佣金金額減去退水金額的差額</li>
+                                            <li><strong>實佔退水:</strong> 退水（百分比）</li>
+                                            <li><strong>賺水:</strong> 退水金額</li>
                                         </ul>
                                     </div>
                                 </div>
