--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1440,33 +1440,35 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive" style="font-size: 12px;">
-                                <table class="table table-bordered">
-                                    <thead style="background-color: #2c3e50;">
-                                        <tr>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 60px;">級別</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">用戶名</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">餘額</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 50px;">筆數</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">下注金額</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">有效金額</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">會員輸贏</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 60px;">退水</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">盈虧結果</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">應收下級</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 50px;">佔成</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">佔成金額</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">佔成結果</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 70px;">實佔退水</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 60px;">賺水</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">盈虧結果</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">上交貨量</th>
-                                            <th style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; min-width: 80px;">上級交收</th>
+                                <table class="table table-bordered table-sm">
+                                    <thead>
+                                        <!-- 第一行：分組標題 -->
+                                        <tr style="background-color: #2c3e50;">
+                                            <th rowspan="2" style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; vertical-align: middle; min-width: 120px;">用戶名</th>
+                                            <th rowspan="2" style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; vertical-align: middle; min-width: 80px;">下級金額</th>
+                                            <th rowspan="2" style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; vertical-align: middle; min-width: 80px;">有效金額</th>
+                                            <th colspan="3" style="color: white; font-weight: bold; background-color: #34495e; text-align: center; border-bottom: 2px solid #95a5a6;">會員輸贏</th>
+                                            <th colspan="7" style="color: white; font-weight: bold; background-color: #2c3e50; text-align: center; border-bottom: 2px solid #95a5a6;">{{ reportBreadcrumb.length > 0 ? reportBreadcrumb[reportBreadcrumb.length - 1].level : getLevelName(user?.level) || '總代理' }}</th>
+                                        </tr>
+                                        <!-- 第二行：細項標題 -->
+                                        <tr style="background-color: #34495e;">
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 80px;">輸贏</th>
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 60px;">退水</th>
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 80px;">盈虧結果</th>
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 50px;">佔成</th>
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 80px;">佔成金額</th>
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 80px;">佔成結果</th>
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 70px;">實佔退水</th>
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 60px;">賺水</th>
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 80px;">盈虧結果</th>
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 80px;">上交貨量</th>
+                                            <th style="color: white; font-weight: bold; background-color: #34495e; text-align: center; min-width: 80px;">上級交收</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <!-- 統一的代理+會員列表 -->
                                         <tr v-for="item in reportData.reportData" :key="item.username">
-                                            <td class="text-center">{{ item.level }}</td>
+                                            <!-- 用戶名 -->
                                             <td class="text-center">
                                                 <!-- 如果是代理且有下級，顯示為可點擊 -->
                                                 <div v-if="item.userType === 'agent' && item.hasDownline" class="d-flex align-items-center justify-content-center">
@@ -1492,78 +1494,84 @@
                                                     </span>
                                                 </div>
                                             </td>
-                                            <td class="text-end">{{ formatMoney(item.balance) }}</td>
-                                            <td class="text-center">{{ item.betCount }}</td>
+                                            <!-- 下注金額 -->
                                             <td class="text-end">{{ formatMoney(item.betAmount) }}</td>
+                                            <!-- 有效金額 -->
                                             <td class="text-end">{{ formatMoney(item.validAmount) }}</td>
-                                            <td class="text-end" :class="getProfitClass(item.memberWinLoss)">
-                                                {{ formatProfit(item.memberWinLoss) }}
+                                            <!-- 會員輸贏：輸贏 -->
+                                            <td class="text-end" :class="getProfitClass(-item.memberWinLoss)">
+                                                {{ formatProfit(-item.memberWinLoss) }}
                                             </td>
+                                            <!-- 會員輸贏：退水 -->
                                             <td class="text-end">{{ formatMoney(item.rebate) }}</td>
+                                            <!-- 會員輸贏：盈虧結果 -->
                                             <td class="text-end" :class="getProfitClass(item.profitLoss)">
                                                 {{ formatProfit(item.profitLoss) }}
                                             </td>
+                                            <!-- 代理：佔成 -->
+                                            <td class="text-center">0%</td>
+                                            <!-- 代理：佔成金額 -->
                                             <td class="text-end">0.00</td>
+                                            <!-- 代理：佔成結果 -->
+                                            <td class="text-end">0.00</td>
+                                            <!-- 代理：實佔退水 -->
                                             <td class="text-center">
-                                                <span class="badge bg-info">0.0%</span>
+                                                <span class="badge bg-warning">{{ item.actualRebate ? item.actualRebate.toFixed(1) : '0.0' }}%</span>
                                             </td>
-                                            <td class="text-end">$0.00</td>
-                                            <td class="text-end">$0.00</td>
-                                            <td class="text-center">
-                                                <span class="badge bg-warning">{{ item.actualRebate.toFixed(1) }}%</span>
-                                            </td>
+                                            <!-- 代理：賺水 -->
                                             <td class="text-end" :class="getProfitClass(item.rebateProfit)">
                                                 {{ formatProfit(item.rebateProfit) }}
                                             </td>
-                                            <td class="text-end" :class="getProfitClass(item.finalProfitLoss)">
-                                                {{ formatProfit(item.finalProfitLoss) }}
+                                            <!-- 代理：盈虧結果 -->
+                                            <td class="text-end" :class="getProfitClass(item.rebateProfit)">
+                                                {{ formatProfit(item.rebateProfit) }}
                                             </td>
-                                            <td class="text-end">0.00</td>
-                                            <td class="text-end">$0.00</td>
+                                            <!-- 代理：上交貨量 -->
+                                            <td class="text-end">{{ formatMoney(item.betAmount) }}</td>
+                                            <!-- 代理：上級交收 = 應收下線 + 盈虧結果 -->
+                                            <td class="text-end" :class="getProfitClass(-item.profitLoss - item.rebateProfit)">
+                                                {{ formatProfit(-item.profitLoss - item.rebateProfit) }}
+                                            </td>
                                         </tr>
                                         
                                         <!-- 總計行 -->
                                         <tr v-if="reportData.reportData && reportData.reportData.length > 0" class="fw-bold" style="background-color: #e8f5e9; border-top: 2px solid #4caf50;">
                                             <td class="text-center">總計</td>
-                                            <td class="text-center">-</td>
-                                            <td class="text-end">-</td>
-                                            <td class="text-center">{{ reportData.totalSummary.betCount }}</td>
                                             <td class="text-end">{{ formatMoney(reportData.totalSummary.betAmount) }}</td>
                                             <td class="text-end">{{ formatMoney(reportData.totalSummary.validAmount) }}</td>
-                                            <td class="text-end" :class="getProfitClass(reportData.totalSummary.memberWinLoss)">
-                                                {{ formatProfit(reportData.totalSummary.memberWinLoss) }}
+                                            <td class="text-end" :class="getProfitClass(-reportData.totalSummary.memberWinLoss)">
+                                                {{ formatProfit(-reportData.totalSummary.memberWinLoss) }}
                                             </td>
                                             <td class="text-end">{{ formatMoney(reportData.totalSummary.rebate) }}</td>
                                             <td class="text-end" :class="getProfitClass(reportData.totalSummary.profitLoss)">
                                                 {{ formatProfit(reportData.totalSummary.profitLoss) }}
                                             </td>
+                                            <td class="text-center">0%</td>
+                                            <td class="text-end">0.00</td>
                                             <td class="text-end">0.00</td>
                                             <td class="text-center">
-                                                <span class="badge bg-info">0.0%</span>
-                                            </td>
-                                            <td class="text-end">$0.00</td>
-                                            <td class="text-end">$0.00</td>
-                                            <td class="text-center">
-                                                <span class="badge bg-success">{{ reportData.totalSummary.actualRebate.toFixed(1) }}%</span>
+                                                <span class="badge bg-success">{{ reportData.totalSummary.actualRebate ? reportData.totalSummary.actualRebate.toFixed(1) : '0.0' }}%</span>
                                             </td>
                                             <td class="text-end" :class="getProfitClass(reportData.totalSummary.rebateProfit)">
                                                 {{ formatProfit(reportData.totalSummary.rebateProfit) }}
                                             </td>
-                                            <td class="text-end fw-bold text-success" :class="getProfitClass(reportData.totalSummary.finalProfitLoss)">
-                                                {{ formatProfit(reportData.totalSummary.finalProfitLoss) }}
+                                            <td class="text-end fw-bold" :class="getProfitClass(reportData.totalSummary.rebateProfit)">
+                                                {{ formatProfit(reportData.totalSummary.rebateProfit) }}
                                             </td>
-                                            <td class="text-end">0.00</td>
-                                            <td class="text-end">$0.00</td>
+                                            <td class="text-end">{{ formatMoney(reportData.totalSummary.betAmount) }}</td>
+                                            <td class="text-end fw-bold" :class="getProfitClass(-reportData.totalSummary.profitLoss - reportData.totalSummary.rebateProfit)">
+                                                {{ formatProfit(-reportData.totalSummary.profitLoss - reportData.totalSummary.rebateProfit) }}
+                                            </td>
                                         </tr>
                                         
                                         <tr v-if="loading">
-                                            <td colspan="18" class="text-center text-muted py-4">
+                                            <td colspan="14" class="text-center text-muted py-4">
                                                 <i class="fas fa-spinner fa-spin fa-2x mb-2 d-block"></i>
                                                 載入中...
                                             </td>
                                         </tr>
                                         <tr v-else-if="!reportData.reportData || reportData.reportData.length === 0">
-                                            <td colspan="18" class="text-center text-muted py-4">
+                                            <td colspan="14" class="text-center text-muted py-4">
                                                 <i class="fas fa-inbox fa-2x mb-2 d-block"></i>
                                                 沒有資料
                                             </td>
@@ -2101,15 +2109,11 @@
                                         </option>
                                     </select>
                                 </div>
-                                <div class="col-md-2">
-                                    <label class="form-label">日期</label>
-                                    <input type="date" class="form-control" v-model="betFilters.date">
-                                </div>
-                                <div class="col-md-2">
+                                <div class="col-md-3">
                                     <label class="form-label">開始日期</label>
                                     <input type="date" class="form-control" v-model="betFilters.startDate">
                                 </div>
-                                <div class="col-md-2">
+                                <div class="col-md-3">
                                     <label class="form-label">結束日期</label>
                                     <input type="date" class="form-control" v-model="betFilters.endDate">
                                 </div>
